fix: fix navbar ui on small screens

--- a/client/src/styles/ui.css
+++ b/client/src/styles/ui.css
@@ -22,14 +22,6 @@
   top: 22px;
 }
 
-.navbar-links {
-  font-family: Satoshi, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-}
-
 .navbar-links.active {
   font-family: Satoshi, sans-serif;
   font-style: normal;
@@ -41,10 +33,8 @@
 .navbar-right-content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
   padding: 0px;
-  gap: 34px;
 }
 
 .feature-cards-row {
